--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Boris Tane",
   "license": "ISC",
   "dependencies": {
-    "d3": "^5.7.0"
+    "d3": "^5.7.0",
+    "d3-svg-legend": "^2.25.6"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
