--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "d3": "^5.7.0",
-    "d3-svg-legend": "^2.25.6"
+    "d3-svg-legend": "^2.25.6",
+    "simplify-geojson": "^1.0.3"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
