--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "d3": "^5.7.0",
     "d3-svg-legend": "^2.25.6",
-    "simplify-geojson": "^1.0.3"
+    "simplify-geojson": "^1.0.3",
+    "stat-methods": "^0.1.5"
   },
   "devDependencies": {
     "eslint": "^5.10.0",
